@@ -1,2 +1,2 @@
-java -XX:PermSize=1M -XX:MaxPermSize=2M -Xmx2M -cp out-of-memory-error-test-1.0.0-SNAPSHOT-jar-with-dependencies.jar com.epam.jmp.memory.management.heap.PermGenTest 
+java -XX:MaxPermSize=1M -Xmx10M -cp out-of-memory-error-test-1.0.0-SNAPSHOT-jar-with-dependencies.jar com.epam.jmp.memory.management.heap.PermGenTest 
 pause
